@@ -1,3 +1,10 @@
+2006-11-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b5
+
+ * Change: Add possibility to change the brush color in imapmap.
+
+ * New: possibbility to call a callBack() function from colorpicker.
+	Thanks to valiant for help ;)
+
 2006-11-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b4
 
  * Fix: Text with linebreaks didnt work in imagemap description.
